# kast-task-manager

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  SOLUTION.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 27be2199d486_add_comments_table.py  7825df9da653_add_activities_table.py  a71be9e9e5bf_add_notifications_table.py  f72b8125f5ba_initial_schema.py  f7779f5fcf5f_initial_schema.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: ActivityFeed.jsx  CommentSection.jsx  Header.jsx  MemberList.jsx  (+4 more)
src/: main.py
src/controllers/: activity_controller.py  auth_controller.py  comment_controller.py  notification_controller.py  project_controller.py  task_controller.py
src/core/: config.py  database.py  dependencies.py  rate_limit.py  scheduler.py  security.py
src/domain/: activity.py  comment.py  enums.py  notification.py  project.py  task.py  user.py
src/models/: activity.py  comment.py  notification.py  project.py  project_member.py  task.py  user.py
src/repositories/: activity_repository.py  comment_repository.py  notification_repository.py  project_repository.py  task_repository.py  user_repository.py
src/schemas/: auth.py  comment.py  project.py  task.py
src/scripts/: seed.py
src/services/: activity_service.py  auth_service.py  comment_service.py  project_service.py  task_service.py
tests/: conftest.py  test_activity.py  test_auth.py  test_comments.py  test_notifications.py  test_projects.py  test_tasks.py
(+14 files in other folders)
